[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "http"
path = "src/http/lib.rs"

[[bin]]
name = "server"
src = "src/bin/server.rs"

[dependencies]
anyhow = "1.0.68"                                                               # error handling
bytes = "1.3.0"                                                                 # helps manage buffers
nom = "7.1.3"
thiserror = "1.0.38"                                                            # error handling
tokio = { version = "1.39.3", features = ["net", "rt-multi-thread", "macros"] }
